--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
@@ -14,7 +14,9 @@
     "react-dom": "18.1.0"
   },
   "devDependencies": {
+    "@types/react": "^18.0.9",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6"
-  }
+  },
+  "license": "UNLICENSED"
 }
